syntax = "proto3";

package community.interface.XXXUserServer;

// specify golang package name
option go_package = "api";

// NoArgReq
message NoArgRequest{}
// NoReply
message NoReply{}

message GetUserNameReply {
    string name = 1;
}

service XXXUserServer {
    rpc GetUserName(NoArgRequest)   returns (GetUserNameReply)  {}
   
}


